# LeCordeur

./: CMakeLists.txt  README.md
.github/workflows/: release.yml  tests.yml
include/: config.hpp  dsp.hpp  note_detection.hpp  ring_buffer.hpp
src/: config.cpp  dsp.cpp  main.cpp  note_detection.cpp  ring_buffer.cpp
tests/: test_dsp.cpp  test_frequency_to_note.cpp
